src/geometry/point/coordinate/snapshots/kasane_logic__geometry__point__coordinate__tests__single_id__altitude_boundary_at_z25.snap
---
source: src/geometry/point/coordinate/tests.rs
expression: coord.single_id(25).unwrap()
---
SingleId {
    z: Zoom(
        25,
    ),
    f: 1,
    x: 29804359,
    y: 13212980,
    temporal_id: TemporalId,
}
