src/geometry/point/coordinate/snapshots/kasane_logic__geometry__point__coordinate__tests__single_id__boundary_latitude_at_z5.snap
---
source: src/geometry/point/coordinate/tests.rs
expression: coord.single_id(5).unwrap()
---
SingleId {
    z: ZoomLevel(
        5,
    ),
    f: 0,
    x: 16,
    y: 12,
    temporal_id: TemporalCell,
}
