src/geometry/point/coordinate/snapshots/kasane_logic__geometry__point__coordinate__tests__single_id__near_northern_limit_at_z25.snap
---
source: src/geometry/point/coordinate/tests.rs
expression: coord.single_id(25).unwrap()
---
SingleId {
    z: Zoom(
        25,
    ),
    f: 0,
    x: 33554431,
    y: 31,
    i: Interval,
    t: 0,
}
